hphp/test/slow/async/return-annotation-2.php.expectf
Fatal error: Return type hint for async function f() must be Awaitable in %s on line 2
